# sigstore-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  interop.yml  release-plz.yml
crates/sigstore-bundle/: CHANGELOG.md  Cargo.toml
crates/sigstore-bundle/src/: builder.rs  lib.rs  validation.rs
crates/sigstore-bundle/tests/: bundle_v3_tests.rs  bundle_versions_tests.rs
crates/sigstore-cache/: CHANGELOG.md  README.md
crates/sigstore-cache/src/: filesystem.rs  lib.rs
crates/sigstore-conformance/: Cargo.toml
crates/sigstore-conformance/src/: main.rs
crates/sigstore-crypto/: CHANGELOG.md  Cargo.toml
crates/sigstore-crypto/src/: checkpoint.rs  lib.rs  signing.rs  verification.rs  x509.rs
crates/sigstore-fulcio/: CHANGELOG.md  Cargo.toml
crates/sigstore-fulcio/src/: client.rs
crates/sigstore-merkle/: CHANGELOG.md  Cargo.toml
crates/sigstore-merkle/src/: lib.rs  proof.rs  tree.rs
crates/sigstore-merkle/tests/: rfc6962_tests.rs
crates/sigstore-oidc/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-oidc/src/: ambient.rs  lib.rs  oauth.rs  templates.rs  token.rs
crates/sigstore-oidc/src/templates/: error.html  success.html
crates/sigstore-rekor/: CHANGELOG.md  Cargo.toml
crates/sigstore-rekor/src/: body.rs  client.rs  entry.rs  lib.rs
crates/sigstore-sign/: CHANGELOG.md  Cargo.toml
crates/sigstore-sign/examples/: sign_attestation.rs  sign_blob.rs
crates/sigstore-sign/src/: lib.rs  sign.rs
crates/sigstore-trust-root/: CHANGELOG.md  Cargo.toml
crates/sigstore-trust-root/src/: lib.rs  signing_config.rs  trusted_root.rs  tuf.rs
crates/sigstore-trust-root/tests/: parsing.rs
crates/sigstore-tsa/: CHANGELOG.md  Cargo.toml
crates/sigstore-tsa/src/: asn1.rs  client.rs  lib.rs  verify.rs
crates/sigstore-types/: CHANGELOG.md  Cargo.toml
crates/sigstore-types/src/: artifact.rs  bundle.rs  checkpoint.rs  dsse.rs  encoding.rs  hash.rs  intoto.rs  lib.rs
crates/sigstore-verify/: CHANGELOG.md  Cargo.toml
crates/sigstore-verify/examples/: verify_bundle.rs
crates/sigstore-verify/src/: lib.rs  verify.rs
crates/sigstore-verify/src/verify_impl/: hashedrekord.rs  helpers.rs  rekor.rs  sct.rs  tlog.rs
crates/sigstore-verify/tests/: verification_tests.rs
crates/sigstore/examples/: attest_blob.rs  conformance.rs  sign_blob.rs
crates/sigstore/src/: sign.rs  verify.rs
crates/sigstore/src/verify_impl/: hashedrekord.rs  helpers.rs  rekor.rs  sct.rs  tlog.rs
crates/sigstore/tests/: verification_tests.rs
scripts/: check-native-tls.sh
