[package]
name = "sigstore-bundle"
description = "Bundle format handling for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
sigstore-merkle = { workspace = true }
sigstore-tsa = { workspace = true }
sigstore-rekor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
