[package]
name = "sigstore-conformance"
description = "Sigstore conformance test client (not published)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "conformance"
path = "src/main.rs"

[dependencies]
sigstore-sign = { workspace = true }
sigstore-verify = { workspace = true }
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
sigstore-fulcio = { workspace = true }
sigstore-oidc = { workspace = true }
sigstore-rekor = { workspace = true }
sigstore-tsa = { workspace = true }
sigstore-trust-root = { workspace = true }
sigstore-bundle = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
x509-cert = { workspace = true }
