[package]
name = "sigstore-oidc"
description = "OpenID Connect identity provider for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable interactive browser-based authentication with local redirect server
interactive = ["dep:open"]

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
url = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
open = { workspace = true, optional = true }

[dev-dependencies]
