[package]
name = "sigstore-oidc"
description = "OpenID Connect identity provider for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls", "ambient-id/rustls-tls"]
native-tls = ["reqwest/native-tls", "ambient-id/native-tls"]

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
# https://github.com/astral-sh/ambient-id/pull/26
ambient-id = { git = "https://github.com/pavelzw/ambient-id", branch = "native-tls", default-features = false, features = [
  "reqwest-middleware",
] }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
