[package]
name = "sigstore-oidc"
description = "OpenID Connect identity provider for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls", "ambient-id/rustls"]
native-tls = ["reqwest/native-tls", "ambient-id/native-tls"]

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
ambient-id = "0.0.9"
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
