[package]
name = "sigstore-sign"
description = "Sigstore signature creation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
sigstore-bundle = { workspace = true }
sigstore-rekor = { workspace = true }
sigstore-fulcio = { workspace = true }
sigstore-oidc = { workspace = true }
sigstore-tsa = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
x509-cert = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
